src/test/deca/syntax/valid/sansObjet/24_print_sans_input.deca
// Description:
//    tests de print et println sans input
//
// Resultats:
//    Print rien
//
// Historique:
//    cree le 10/01/2020

{
print( );
println();
}
